@@ -58,7 +58,7 @@
  * Global Functions
  ****************************************************************************/
 
-/********************************************************************************************
+/***************************************************************************
  * Function: write
  *
  * Description:
@@ -108,7 +108,7 @@
  *
  ********************************************************************************************/
 
-int write(int fd, FAR const void *buf, unsigned int nbytes)
+ssize_t write(int fd, FAR const void *buf, size_t nbytes)
 {
 #if CONFIG_NFILE_DESCRIPTORS > 0
   FAR struct filelist *list;
